src/HeyNineteen.TuringMachine.Grammar/Antlr/TuringMachineParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from TuringMachine.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class TuringMachineParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, VALID_CHAR=11, BLOCK_COMMENT=12, LINE_COMMENT=13, WS=14;
	public const int
		RULE_file = 0, RULE_machine = 1, RULE_line = 2, RULE_finalMConfiguration = 3, 
		RULE_operations = 4, RULE_operation = 5, RULE_moveLeft = 6, RULE_moveRight = 7, 
		RULE_erase = 8, RULE_print = 9, RULE_symbolSpecification = 10, RULE_mConfiguration = 11;
	public static readonly string[] ruleNames = {
		"file", "machine", "line", "finalMConfiguration", "operations", "operation", 
		"moveLeft", "moveRight", "erase", "print", "symbolSpecification", "mConfiguration"
	};

	private static readonly string[] _LiteralNames = {
		null, "'->'", "';'", "','", "'L'", "'R'", "'E'", "'P'", "'none'", "'any'", 
		"'any-none'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, "VALID_CHAR", 
		"BLOCK_COMMENT", "LINE_COMMENT", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "TuringMachine.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static TuringMachineParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public TuringMachineParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public TuringMachineParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class FileContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public MachineContext machine() {
			return GetRuleContext<MachineContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(TuringMachineParser.Eof, 0); }
		public FileContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_file; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.EnterFile(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.ExitFile(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITuringMachineVisitor<TResult> typedVisitor = visitor as ITuringMachineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFile(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FileContext file() {
		FileContext _localctx = new FileContext(Context, State);
		EnterRule(_localctx, 0, RULE_file);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 24;
			machine();
			State = 25;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MachineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public MachineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_machine; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.EnterMachine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.ExitMachine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITuringMachineVisitor<TResult> typedVisitor = visitor as ITuringMachineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMachine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MachineContext machine() {
		MachineContext _localctx = new MachineContext(Context, State);
		EnterRule(_localctx, 2, RULE_machine);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 27;
			line();
			State = 31;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==VALID_CHAR) {
				{
				{
				State = 28;
				line();
				}
				}
				State = 33;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public MConfigurationContext mConfiguration() {
			return GetRuleContext<MConfigurationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public SymbolSpecificationContext symbolSpecification() {
			return GetRuleContext<SymbolSpecificationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public OperationsContext operations() {
			return GetRuleContext<OperationsContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FinalMConfigurationContext finalMConfiguration() {
			return GetRuleContext<FinalMConfigurationContext>(0);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITuringMachineVisitor<TResult> typedVisitor = visitor as ITuringMachineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(Context, State);
		EnterRule(_localctx, 4, RULE_line);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 34;
			mConfiguration();
			State = 35;
			Match(T__0);
			State = 36;
			symbolSpecification();
			State = 37;
			Match(T__0);
			State = 38;
			operations();
			State = 39;
			Match(T__0);
			State = 40;
			finalMConfiguration();
			State = 41;
			Match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FinalMConfigurationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] VALID_CHAR() { return GetTokens(TuringMachineParser.VALID_CHAR); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VALID_CHAR(int i) {
			return GetToken(TuringMachineParser.VALID_CHAR, i);
		}
		public FinalMConfigurationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_finalMConfiguration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.EnterFinalMConfiguration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.ExitFinalMConfiguration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITuringMachineVisitor<TResult> typedVisitor = visitor as ITuringMachineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFinalMConfiguration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FinalMConfigurationContext finalMConfiguration() {
		FinalMConfigurationContext _localctx = new FinalMConfigurationContext(Context, State);
		EnterRule(_localctx, 6, RULE_finalMConfiguration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 44;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 43;
				Match(VALID_CHAR);
				}
				}
				State = 46;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==VALID_CHAR );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OperationsContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public OperationContext[] operation() {
			return GetRuleContexts<OperationContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public OperationContext operation(int i) {
			return GetRuleContext<OperationContext>(i);
		}
		public OperationsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operations; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.EnterOperations(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.ExitOperations(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITuringMachineVisitor<TResult> typedVisitor = visitor as ITuringMachineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperations(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OperationsContext operations() {
		OperationsContext _localctx = new OperationsContext(Context, State);
		EnterRule(_localctx, 8, RULE_operations);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48;
			operation();
			State = 53;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__2) {
				{
				{
				State = 49;
				Match(T__2);
				State = 50;
				operation();
				}
				}
				State = 55;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OperationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public MoveLeftContext moveLeft() {
			return GetRuleContext<MoveLeftContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MoveRightContext moveRight() {
			return GetRuleContext<MoveRightContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EraseContext erase() {
			return GetRuleContext<EraseContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PrintContext print() {
			return GetRuleContext<PrintContext>(0);
		}
		public OperationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operation; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.EnterOperation(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.ExitOperation(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITuringMachineVisitor<TResult> typedVisitor = visitor as ITuringMachineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OperationContext operation() {
		OperationContext _localctx = new OperationContext(Context, State);
		EnterRule(_localctx, 10, RULE_operation);
		try {
			State = 60;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__3:
				EnterOuterAlt(_localctx, 1);
				{
				State = 56;
				moveLeft();
				}
				break;
			case T__4:
				EnterOuterAlt(_localctx, 2);
				{
				State = 57;
				moveRight();
				}
				break;
			case T__5:
				EnterOuterAlt(_localctx, 3);
				{
				State = 58;
				erase();
				}
				break;
			case T__6:
				EnterOuterAlt(_localctx, 4);
				{
				State = 59;
				print();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MoveLeftContext : ParserRuleContext {
		public MoveLeftContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_moveLeft; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.EnterMoveLeft(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.ExitMoveLeft(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITuringMachineVisitor<TResult> typedVisitor = visitor as ITuringMachineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMoveLeft(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MoveLeftContext moveLeft() {
		MoveLeftContext _localctx = new MoveLeftContext(Context, State);
		EnterRule(_localctx, 12, RULE_moveLeft);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62;
			Match(T__3);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MoveRightContext : ParserRuleContext {
		public MoveRightContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_moveRight; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.EnterMoveRight(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.ExitMoveRight(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITuringMachineVisitor<TResult> typedVisitor = visitor as ITuringMachineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMoveRight(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MoveRightContext moveRight() {
		MoveRightContext _localctx = new MoveRightContext(Context, State);
		EnterRule(_localctx, 14, RULE_moveRight);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 64;
			Match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EraseContext : ParserRuleContext {
		public EraseContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_erase; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.EnterErase(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.ExitErase(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITuringMachineVisitor<TResult> typedVisitor = visitor as ITuringMachineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitErase(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EraseContext erase() {
		EraseContext _localctx = new EraseContext(Context, State);
		EnterRule(_localctx, 16, RULE_erase);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 66;
			Match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrintContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VALID_CHAR() { return GetToken(TuringMachineParser.VALID_CHAR, 0); }
		public PrintContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_print; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.EnterPrint(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.ExitPrint(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITuringMachineVisitor<TResult> typedVisitor = visitor as ITuringMachineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrint(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrintContext print() {
		PrintContext _localctx = new PrintContext(Context, State);
		EnterRule(_localctx, 18, RULE_print);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 68;
			Match(T__6);
			State = 69;
			Match(VALID_CHAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SymbolSpecificationContext : ParserRuleContext {
		public SymbolSpecificationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_symbolSpecification; } }
	 
		public SymbolSpecificationContext() { }
		public virtual void CopyFrom(SymbolSpecificationContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class SymbolContext : SymbolSpecificationContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VALID_CHAR() { return GetToken(TuringMachineParser.VALID_CHAR, 0); }
		public SymbolContext(SymbolSpecificationContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.EnterSymbol(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.ExitSymbol(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITuringMachineVisitor<TResult> typedVisitor = visitor as ITuringMachineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitSymbol(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AnyNoneContext : SymbolSpecificationContext {
		public AnyNoneContext(SymbolSpecificationContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.EnterAnyNone(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.ExitAnyNone(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITuringMachineVisitor<TResult> typedVisitor = visitor as ITuringMachineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAnyNone(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class NoneContext : SymbolSpecificationContext {
		public NoneContext(SymbolSpecificationContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.EnterNone(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.ExitNone(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITuringMachineVisitor<TResult> typedVisitor = visitor as ITuringMachineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNone(this);
			else return visitor.VisitChildren(this);
		}
	}
	public partial class AnyContext : SymbolSpecificationContext {
		public AnyContext(SymbolSpecificationContext context) { CopyFrom(context); }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.EnterAny(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.ExitAny(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITuringMachineVisitor<TResult> typedVisitor = visitor as ITuringMachineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAny(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public SymbolSpecificationContext symbolSpecification() {
		SymbolSpecificationContext _localctx = new SymbolSpecificationContext(Context, State);
		EnterRule(_localctx, 20, RULE_symbolSpecification);
		try {
			State = 75;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__7:
				_localctx = new NoneContext(_localctx);
				EnterOuterAlt(_localctx, 1);
				{
				State = 71;
				Match(T__7);
				}
				break;
			case T__8:
				_localctx = new AnyContext(_localctx);
				EnterOuterAlt(_localctx, 2);
				{
				State = 72;
				Match(T__8);
				}
				break;
			case T__9:
				_localctx = new AnyNoneContext(_localctx);
				EnterOuterAlt(_localctx, 3);
				{
				State = 73;
				Match(T__9);
				}
				break;
			case VALID_CHAR:
				_localctx = new SymbolContext(_localctx);
				EnterOuterAlt(_localctx, 4);
				{
				State = 74;
				Match(VALID_CHAR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MConfigurationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] VALID_CHAR() { return GetTokens(TuringMachineParser.VALID_CHAR); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode VALID_CHAR(int i) {
			return GetToken(TuringMachineParser.VALID_CHAR, i);
		}
		public MConfigurationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mConfiguration; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.EnterMConfiguration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			ITuringMachineListener typedListener = listener as ITuringMachineListener;
			if (typedListener != null) typedListener.ExitMConfiguration(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ITuringMachineVisitor<TResult> typedVisitor = visitor as ITuringMachineVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMConfiguration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MConfigurationContext mConfiguration() {
		MConfigurationContext _localctx = new MConfigurationContext(Context, State);
		EnterRule(_localctx, 22, RULE_mConfiguration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 78;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 77;
				Match(VALID_CHAR);
				}
				}
				State = 80;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( _la==VALID_CHAR );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}


	public static readonly ATN _ATN =
		new ATNDeserializer().Deserialize(_serializedATN);


}
